added caching and tests for its performance