@@ -171,6 +171,16 @@
 		<scope>runtime</scope>
 	</dependency>
 
+	<!-- Cache -->
+	<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-cache</artifactId>
+	</dependency>
+	<dependency>
+		<groupId>com.github.ben-manes.caffeine</groupId>
+		<artifactId>caffeine</artifactId>
+	</dependency>
+
 	<!-- Health Checks -->
     <dependency>
         <groupId>org.springframework.boot</groupId>
@@ -194,7 +204,7 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
+<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
@@ -274,7 +284,6 @@
 						-XX:+EnableDynamicAgentLoading
 						-Xshare:off
 						--add-opens java.base/java.lang=ALL-UNNAMED
-						--sun-misc-unsafe-memory-access=allow
 					</argLine>
 				</configuration>
 			</plugin>
